--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
     <div id="logo" style="background-image: url({{ "images/logo.png" | relURL }})"></div>
   {{ end}}
   <div id="title">
-    <h1>{{ .Site.Title }}</h1>
+    <h1>{{ .Site.Title }}</h1>@@
   </div>
   </a>
   <div id="nav">
